--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 spring.datasource.url=jdbc:h2:file:~/productdb
 spring.datasource.username=sa
 spring.datasource.password=
